namespace Domain.Entity.Hotel;

public class HotelHotelTag
{
    
}