// ==============================================
// REFERENCE TABLES (Lookup/Dictionary Tables)
// ==============================================

Table RoomStatus {
  Id integer [primary key]
  Name varchar
}

Table ReservationStatus {
  Id integer [primary key]
  Name varchar
}

Table PaymentStatus {
  Id integer [primary key]
  Name varchar
}

Table PaymentMethod {
  Id integer [primary key]
  Name varchar
}

Table Gender {
  Id integer [primary key]
  Name varchar
}

Table Role {
  Id integer [primary key]
  Name varchar
  Description varchar
}

Table Permission {
  Id integer [primary key]
  FlagId integer
  TableId integer
  ActionId integer
}

Table UserPermissionFlag {
  Id integer [primary key]
  Name varchar
}

Table UserPermissionTable {
  Id integer [primary key]
  Name varchar
}

Table UserPermissionAction {
  Id integer [primary key]
  Name varchar
}

Table HotelTag {
  Id integer [primary key]
  Name varchar
  Description varchar
}

Table RoomTag {
  Id integer [primary key]
  Name varchar
  Description varchar
}

Table RoomType {
  Id integer [primary key]
  Name varchar
  Description varchar
  BasePrice decimal
  MaxCountGuest integer
}

// ==============================================
// MAIN BUSINESS TABLES
// ==============================================

Table Hotel {
  Id integer [primary key]
  Region varchar
  Country varchar
  City varchar
  Address varchar
  Street varchar
  Email varchar
  Phone varchar
  Latitude float
  Longitude float
}

Table Room {
  Id integer [primary key]
  HotelId integer
  TypeRomeId integer
  RoomNumber varchar
  Floor integer
  RoomStatusId integer
}

Table Guest {
  Id integer [primary key]
  UserId integer
  CreateAt timestamp
}

Table Employee {
  Id integer [primary key]
  HotelId integer
  UserId integer
  FirstName varchar
  LastName varchar
  Patronymic varchar
  CreateAt timestamp
  HireDate timestamp
}

Table User {
  Id integer [primary key]
  UserName varchar
  DateOfBirth date
  CreateAt timestamp
  GenderId integer}

Table ApplicationUser {
  Id integer [primary key]
  UserId integer
  Email varchar
  Phone varchar
  PasswordHash varchar
}

Table Reservation {
  Id integer [primary key]
  GuestId integer
  RoomId integer
  CheckIn date
  CheckOut date
  CreateAt timestamp
  TotalPrice decimal
  ReservationStatusId integer
  Discount decimal
}

Table Payment {
  Id integer [primary key]
  Amount decimal
  PaymentDate timestamp
  MethodId integer
  StatusId integer
}

// ==============================================
// MANY-TO-MANY JUNCTION TABLES
// ==============================================

Table RoomTagRoom {
  RoomTagId integer [primary key]
  RoomId integer [primary key]
}

Table HotelHotelTag {
  HotelTagId integer [primary key]
  HotelId integer [primary key]
}

Table ReservationPayment {
  ReservationId integer [primary key]
  PaymentId integer [primary key]
}

Table UserRole {
  RoleId integer [primary key]
  AuthorId integer [primary key]  // Author who assigned the role
  EmployeeId integer [primary key]  // Employee receiving the role
  CreateAt timestamp
}

Table UserPermission {
  EmployeeId integer [primary key]
  AuthorId integer [primary key]  // Author who granted permission
  PermissionId integer [primary key]
  CreateAt timestamp
}

Table RolePermission {
  RoleId integer [primary key]
  PermissionId integer [primary key]
}

// ==============================================
// REFERENCE RELATIONSHIPS (Explicitly defined)
// ==============================================

Ref: Permission.FlagId > UserPermissionFlag.Id
Ref: Permission.TableId > UserPermissionTable.Id
Ref: Permission.ActionId > UserPermissionAction.Id

Ref: Room.HotelId > Hotel.Id
Ref: Room.TypeRomeId > RoomType.Id
Ref: Room.RoomStatusId > RoomStatus.Id

Ref: Guest.UserId > User.Id

Ref: Employee.HotelId > Hotel.Id
Ref: Employee.UserId > User.Id

Ref: User.GenderId > Gender.Id

Ref: ApplicationUser.UserId > User.Id

Ref: Reservation.GuestId > Guest.Id
Ref: Reservation.RoomId > Room.Id
Ref: Reservation.ReservationStatusId > ReservationStatus.Id

Ref: Payment.MethodId > PaymentMethod.Id
Ref: Payment.StatusId > PaymentStatus.Id

Ref: RoomTagRoom.RoomTagId > RoomTag.Id
Ref: RoomTagRoom.RoomId > Room.Id

Ref: HotelHotelTag.HotelTagId > HotelTag.Id
Ref: HotelHotelTag.HotelId > Hotel.Id

Ref: ReservationPayment.ReservationId > Reservation.Id
Ref: ReservationPayment.PaymentId > Payment.Id

Ref: UserRole.RoleId > Role.Id
Ref: UserRole.AuthorId > User.Id
Ref: UserRole.EmployeeId > Employee.Id

Ref: UserPermission.EmployeeId > Employee.Id
Ref: UserPermission.AuthorId > User.Id
Ref: UserPermission.PermissionId > Permission.Id

Ref: RolePermission.RoleId > Role.Id
Ref: RolePermission.PermissionId > Permission.Id